@@ -17,7 +17,7 @@
 		<pre>
 ***********************************************************************
 *                                                                     *
-* Copyright (c) David L. Mills 1992-2008                              *
+* Copyright (c) University of Delaware 1992-2008                      *
 *                                                                     *
 * Permission to use, copy, modify, and distribute this software and   *
 * its documentation for any purpose with or without fee is hereby     *
