@@ -255,7 +255,7 @@
 			<dd>The status field is encoded in hex format as described in Appendix B of the NTP specification RFC 1305.
 		
 			<dt><tt>protostats</tt>
-			<dd>Record significant peer, system and clock events. Each significant event appends one line to the <tt>cryptostats</tt> file set:
+			<dd>Record significant peer, system and [rptpcp; events. Each significant event appends one line to the <tt>protostats</tt> file set:
 			<dd><tt>49213 525.624 128.4.1.1 <i>message</i></tt>
 			<dd>
 				<table width="100%" border="1" cellspacing="2" cellpadding="0">
