@@ -1,3 +1,4 @@
+* Documentation updates from Dave Mills.
 * [Bug 1037] Use all 16 of the MD5 passwords generated by ntp-keygen.
 * Fixed the incorrect edge parameter being passed to time_pps_kcbind in
   NMEA refclock driver.
